# popcor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OTHERS.md  README.md  api.html  contributing.html  documentation.yml  environment.yml  environment_small.yml  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  requirements.txt  run_example.py  search.html  searchindex.js  setup.cfg  whatsnew.html
.doctrees/: api.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  quickstart.doctree  whatsnew.doctree
.doctrees/api/: algorithms.doctree  lifters.doctree  utils.doctree
.doctrees/examples/: robust.doctree  standard.doctree  templates.doctree  toy.doctree
.github/: copilot-instructions.md
.github/workflows/: documentation.yml  python-package-conda.yml  static.yml
_modules/: index.html
_modules/popcor/: auto_template.html  auto_tight.html
_sources/: contributing.rst.txt  quickstart.rst.txt
_sources/examples/: standard.rst.txt  templates.rst.txt  toy.rst.txt
api/: algorithms.html  lifters.html  utils.html
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  (+2 more)
examples/: robust.html  standard.html  templates.html  toy.html
notebooks/: rotation_averaging.ipynb
popcor/: __init__.py  auto_template.py  auto_tight.py
popr/: __init__.py  auto_template.py  auto_tight.py
scripts/: rotation_averaging.ipynb
tests/: test_autotemplate.py  test_autotight.py  test_parameters.py  test_quickstart.py  test_rotation_lifter.py  test_signature.py  test_solvers.py  test_state_lifter.py
(+95 files in other folders)
