[metadata]
name = popr
version = 0.0.1
authors = [
    {name = "Frederike Dümbgen", email = "frederike.duembgen@gmail.com" },]
description = POPR -- Polynomial OPtimization for Robotics
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/POPR.git"

[options]
packages = 
  popr
  popr.solvers
  popr.examples
  popr.utils

[flake8]
ignore = W292, W391, F541, F841, E203, E501, W503, E741
exclude = _notebooks/*, *.ipynb_checkpoints*, venv/
max-line-length = 99
