[metadata]
name = popr
version = 0.0.1
authors = [
    {name = "Frederike Dümbgen", email = "frederike.duembgen@gmail.com" },]
description = POPR -- Polynomial OPtimization for Robotics
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/utiasASRL/POPR.git"

[options]
packages = 
  popr
  popr.solvers
  popr.examples
  popr.utils
install_requires = 
  numpy>=1.23
  scipy>=1.9
  cvxpy>=1.3
  pymanopt>=2.1
  chompack>=2.3
  autograd
  asrl-pylgmath>=1.0.3
  sparseqr
  poly_matrix @ git+https://github.com/utiasASRL/poly_matrix.git@v0.3.1#egg=poly_matrix
  cert_tools @ git+https://github.com/utiasASRL/certifiable-tools.git@v0.0.5#egg=cert_tools

[flake8]
ignore = W292, W391, F541, F841, E203, E501, W503, E741
exclude = _notebooks/*, *.ipynb_checkpoints*, venv/
max-line-length = 99
